# piet

./: .gitignore  CMakeLists.txt  README.md  TODO.md
.github/workflows/: cmake.yml
doc/: Doxyfile.in
src/: CMakeLists.txt
src/core/: CMakeLists.txt  p_block_manager.cpp  p_calc_stack.cpp  p_calc_stack.h  p_console.cpp  p_console_virtual_machine.h  p_enums.cpp  p_virtual_machine.cpp
src/gui/: CMakeLists.txt  child_window.h  gui.pro  machine_widget.cpp  main.cpp  main_window.h  p_gui_virtual_machine.cpp  p_gui_virtual_machine.h  program_image_widget.cpp  program_image_widget.h
